# Notes

./: .gitignore  Linux移植.md  button_systickIT.c  button_systickIT.h  定时器中断实现Nec.md
CO/: 1.2#计算机系统结构中8个伟大思想.md
Code/c & cpp/socket/: socket.cpp
Code/c_cpp/: 2. 库.md  c结构体.md
Code/c_cpp/ModbusHost/: CMakeLists.txt  README.md  compile_commands.json
Code/c_cpp/ModbusHost/.cache/clangd/index/: example.cpp.2F2C421DE93EB283.idx  example.cpp.59AE08EF33C8530D.idx  example.cpp.DF400713B402A01D.idx  modbusTCP.cpp.07258AEDF712D2D4.idx  modbusTCP.cpp.10208D0FDF1B2391.idx  modbusTCP.cpp.26E820A3C84C3CC7.idx  modbusTCP.hpp.1E19EFD7663BE7CC.idx  modbusTCP.hpp.CD9DF05D01AF13DC.idx  modbus_rtu_frame.cpp.029B6E7C875A9674.idx  modbus_rtu_frame.cpp.E8042CF30EE56E83.idx  modbus_rtu_frame.hpp.6D0EE0344D730BE9.idx  modbus_rtu_frame.hpp.A3B6097B532361BF.idx  modbus_tcp_frame.cpp.6ED34D0AD8AA8F8E.idx  modbus_tcp_frame.cpp.BFB10FA075FE26B8.idx  modbus_tcp_frame.hpp.7EA7AC7CA89A3648.idx  modbus_tcp_frame.hpp.F11FFA55AB04626B.idx  test.cpp.FDCB3974123F75EF.idx  test_rtu.cpp.B62C07F68A9360EA.idx  test_tcp.cpp.05C4D6C6F7969991.idx  test_tcp.cpp.BACC5BC57BC8A6C5.idx
Code/c_cpp/ModbusHost/inc/: modbusTCP.hpp  modbus_rtu_frame.hpp  modbus_tcp_client.hpp  modbus_tcp_frame.hpp
Code/c_cpp/ModbusHost/src/: main.cpp  modbus_rtu_frame.cpp  modbus_tcp_client.cpp  modbus_tcp_frame.cpp  test_rtu.cpp  test_tcp.cpp
Code/c_cpp/ModbusSlave/: CMakeLists.txt
Code/c_cpp/ModbusSlave--coding/: CMakeLists.txt
Code/c_cpp/ModbusSlave--coding/src/: modbus_rtu_frame.c
Code/c_cpp/ModbusSlave/src/: over_tcp.c
Code/c_cpp/ModbusTCP/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
Code/c_cpp/ModbusTCP/inc/: modbusTCP.hpp
Code/c_cpp/Nec/: compile_commands.json  it.md  my_typedef.h  nec.c  nec.h
Code/python/: README.md
Code/python/DAV/: 2.1.ipynb  main.py
Code/python/DAV/.ipynb_checkpoints/: 2.1-checkpoint.ipynb
Code/python/DAV/assets/: GDPSta.csv  粮食产量年度数据.csv
Code/python/ModbusScanner/: main.py
Code/rust/: 2.2 复杂类型.md  2.3 特殊类型.md  5. 流程控制.md  6. 模式匹配.md  matches!宏.md
Code/rust/mqttUpload/: Cargo.toml
DB/: eshop.sql  scoresys.sql
Lang/c_cpp/: 1. cpp编译流程.md  c指针.md
Lang/rust/: 1. 变量常量.md  2.1 简单类型.md  3. 运算符.md
Lang/rust/prac/: Cargo.toml
Linux/: Linux Permissions.md  Linux移植.md  linux设备树.md
Linux Embedded/: linux启动流程.md  中断.md
Linux/CentOS/: 防火墙配置.md
Linux/Command/: 7z.md  chmod.md
Linux/wiringPi/inc/: MPU6050.h  SSD1315.h  ST7796U.h
Linux/wiringPi/src/: MPU6050.c  SSD1315.c
Note/CS/: 1. 逻辑运算.md  2. 位元运算.md
Note/IIot/: NEC通信.md  modbus.md  reverse.c
Note/ccpp/: 2. 库.md  cpp编译流程.md
Note/mariadb/: 1. 安装及初始化.md  2. 用户管理.md  3. 数据库操作.md  4. 表操作.md
Note/工业互联网协议/: modbus.md
Note/数据库/一. 数据库系统概述/: 1. 数据库相关基本概念.md  4. 信息的三个世界.md  5. 数据模型机器分类.md
Note/数据库/二. 关系数据库/: 1. 关系的概念.md
Note/网络安全/: 期中复习.md
Note/网络安全/ciscoCmd/: 1. 端口安全配置.md  2. IPSec over GRE.md
OS/: virtualizeMem.c
OS/src/: Makefile  boot.asm  bx_enh_dbg.ini  loader.asm
Prac/c & cpp/ModbusTCP/: .clangd  CMakeLists.txt  README  compile_commands.json
Prac/c & cpp/ModbusTCP/inc/: modbusTCP.hpp
Prac/c & cpp/ModbusTCP/src/: example.cpp  modbusTCP.cpp
Prac/c & cpp/logger/: logger.cpp
Prac/cpp/ModbusTCP/: CMakeLists.txt
Prac/cpp/ModbusTCP/src/: example.cpp
Prac/cpp/logger/: logger.h
Prac/cpp/socket/: socket.h
Prac/py/: README.md  遍历寻找波特率和地址并持续读取温湿度.py
Prac/py/DAV/: Untitled.ipynb  超市销售明细表上（1-4月）.xlsx
Prac/rs/: 0. 特殊机制.md  1. 变量常量.md  2.1 基本类型.md  2.2 复合类型.md  2.2 复杂类型.md  2.3 特殊类型.md  3. 控制流--editing.md  3. 运算符.md  4. 函数.md  A. 以move和copy区分的数据类型速查表--editing.md  B. 关于变量类型的选择.md  书签.md  命名法.md  整形溢出处理--.md  浮点数陷阱--.md  语法糖--.md
Prj/ADT/code/: CMakeLists.txt
Proj/CmdlineToolsMgr(forAndroid)/: .clangd  Makefile  README
Proj/DDSU666/: README.md
Proj/DDSU666/ddsu666/: ddsu666.cpp  ddsu666.h  main.cpp
Proj/DDSU666上位机/: README.md  libmodbus.7z
Proj/DDSU666上位机/ddsu666/: ddsu666.cpp  main.cpp
Proj/Debugging/full_functional_button/: button.c  button.h
Proj/EmbededProj/nec_protocol/: nec_protocol.ioc
Proj/EmbededProj/stm32f103c8t6/: 常亮测试程序.7z
Proj/FrontedProj/HomePage/: index.html  style.css
Proj/FrontedProj/IsFocused/: index.html
Proj/HomePage/: script.js
Proj/ModbusTCP/: .clangd  Makefile
Proj/ModbusTCP/src/: example.cpp  modbusTCP.cpp
Proj/mqtt/SOURCES/: info.md
QT/AMD/: CMakeLists.txt  main.cpp
X86Assembly/: bx_enh_dbg.ini
X86Assembly/src/: boot.asm  loader.asm
c语言/语法/: 结构体.md
c语言/语法/指针/: 指针.md
dev/: .clangd  .mxproject  CMakeLists.txt  dev.ioc
dev/Core/: nec.c  nec.h
dev/Core/Inc/: nec.h  tim.h  usart.h
dev/Core/Src/: gpio.c  main.c  nec.c  tim.c  usart.c
nvim配置日记/: colemak keymap.md  单链表.c
nvim配置日记/BASIC EDITING/: Starting.md
qizhong/: 1.py  main.py  modbus.md
sway/: config
sway/config.d/: keymap.conf  output.conf  shins0u.conf
sway/mode/: resize
sway/modes.d/: default
template/sway/: definitions
专升本/: 毕设.md
作业/: 1332332111洪成智-作业-在线电子商店查询.docx  1332332111洪成智-作业-查询语句强化练习.docx  1332332111洪成智-作业-连接查询-内连接练习.docx  aa.sql  附录B  在线电子商店数据表结构.doc
作业/db/: eshop.sql
前端/demo/AExample/: index.html
单片机/: GPIO.md  外部中断.md
数据库/一. 数据库系统概述/: 2. 数据管理技术的发展.md  3. 数据库系统的结构.md
数据结构/LinkedList/: linked_list.md
数据结构/binaryTree/: BinaryTree.c  BinaryTree.cpp
数据结构/linked list/: linked_list.md
数据结构/linkedList/: linked_list.md  单链表.c
数据结构/linkedList/code/: doublyLinkedlist_WithHead.cpp  singlyLinkedlist_WithHead.cpp  singlyLinkedlist_WithoutHead.cpp
数据结构/stack/: stack.c  stack.cpp
数据结构/栈/: calculator_withPostfixNotation  calculator_withPostfixNotation.cpp  elementaryArithmetic_withPrifixExpr.cpp  main  matchBracket_withStack.cpp
数据结构/队列/: main  queue_withArray.cpp
杂/Linux/: CPU架构.md  计算机组成概要.md
杂/前端/: html.md
杂/计算机组成原理/: 储存单位.md
编程实践/: Makefile
编程实践/socket/: server.cpp  socket.cpp
编译原理/: a  compiler.cpp  demo.c
计科理论/: 2. 位元运算.md
计算机科学速成/: 操作系统.md
计算机组成原理/: 储存单位.md
超声波探伤/: 初步调研结果.md  声波在界面时的反射折射.md  数模转换.md
高等数学/: 3. 函数的概念.md  6. 有界性.md  7. 单调性.md  latex.md  基本初等函数.md
(+43 files in other folders)
